loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:1: error: not found: value exit
exit=false
^Poucet1:3: error: not found: value exit
while (exit==false){
       ^Poucet1:16: error: not found: value exit
      exit=true
      ^